testsuite/tests/properties/invalid_predicate/one_missing_var.lkt
import common

class Example: BaseExample {
    @exported fun prop(): Entity[FooNode] = {
        val _ = Example.pred1%(node.var1);
        node.as_bare_entity
    }
}
